@@ -2,7 +2,7 @@ TODOs:
 Version 1.0
  - AJAX bei neuem Benutzer
  - AJAX login
- - Encrytption options at they userpage
+ - Encrytption options at the userpage
  - Test mit PostgreSQL
   
 Version 1.1
